<resources>
    <string name="app_name">Graduation</string>
    <string name="scanning_data">Scanning Data</string>
    <string name="gender">Gender</string>
    <string name="id_number"> ID Number</string>
    <string name="first_name_Doctor"> First Name</string>
    <string name="second_name_Doctor"> Last Name</string>
    <string name="date_of_birth">Date Of BIrth (DD/MM/YY)</string>
    <string name="upload_a_photo_of_your_id">Upload a photo of your ID</string>
    <string name="data_is_correct">Data Is Correct</string>
    <string name="congratulations">Congratulations</string>
    <string name="person_data_has_been_verified_successfully">Person data has been verified Successfully</string>
    <string name="finish">Finish</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome</string>
    <string name="our_community">To Our Community We Help You Find Patients And Advance Your Career.</string>
    <string name="next">Next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="experience">Experience</string>
    <string name="education">Education</string>
    <string name="therapist">Therapist</string>
    <string name="register_as">Register As</string>
    <string name="way_2_self">Way 2 Self</string>
    <string name="log_in">Log In</string>
    <string name="continue_as">Continue As ..</string>
    <string name="register">Register</string>
    <string name="user">User</string>
    <string name="phone_number">Phone Number:</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="view_our_privacy_policy">view our privacy policy</string>
    <string name="email">Email:</string>
    <string name="enter_email">Enter Email</string>
    <string name="choose_phone_or_email">Choose Phone or Email</string>
    <string name="login_as">Login As</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="welcome_message">We\'re so excited to see you again</string>
    <string name="acc_info">Account Information</string>
    <string name="login_hint">Email or Phone number</string>
    <string name="forget_pass">Forget your password?</string>
    <string name="login">LOG IN</string>
    <string name="forget_your_password">Forget Your Password ?</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="gmail_hint">****@gmail.com</string>
    <string name="send">Send</string>
    <string name="create_new_password">Create New Password</string>
    <string name="enter_a_new_password">Enter a new password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="home">Home</string>
    <string name="profile">profile</string>
    <string name="confirmation_code">Enter Your Confirmation Code</string>
    <string name="an_sms_was_sent">An SMS was sent to +200000000000</string>
    <string name="_0">0</string>
    <string name="verify">Verify</string>
    <string name="sign_with_email_instead">Sign with email instead</string>
    <string name="a_code_was_sent_to_gmail_com">A code was sent to ****@gmail.com</string>
    <string name="sign_with_phone_instead">Sign with Phone instead</string>
    <string name="next_create_your_account">Next, Create your account</string>
    <string name="username">UserName</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="user_password">Password</string>
    <string name="pass">********</string>
    <string name="enter_your_birth_date">Your birth date</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="done">Done</string>
    <string name="step11">Step 1: Breathe in slowly to a count of four, place your hands on your belly and feel it expand like a balloon</string>
    <string name="step12">Step 2: After breathing in, hold your breath for another count of four.</string>
    <string name="step13">Step 3: Breathe out slowly and steadily through your mouth, again counting to four in your mind.</string>
    <string name="step14">Step 4: After breathing out, hold your breath for another count of four.</string>
    <string name="step15">Step 5: Go back to step 1 and repeat as long as you want to.</string>
</resources>