<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/next_create_your_account"
        android:textColor="@color/darkGray"
        android:textSize="28sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="5dp"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText

        android:id="@+id/name_edittext"
        android:layout_width="328dp"
        android:layout_height="57dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_shape"
        android:ems="15"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="5dp"
        android:autofillHints=""
        android:text="@string/user_password"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_edittext" />

    <EditText

        android:id="@+id/pass_edittext"
        android:layout_width="328dp"
        android:layout_height="57dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_shape"
        android:ems="15"
        android:hint="@string/pass"
        android:inputType="textPersonName"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/birthdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:text="@string/enter_your_birth_date"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_edittext" />

    <LinearLayout
        android:id="@+id/birthdate_layout"
        android:layout_width="282dp"
        android:layout_height="62dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthdate">

        <Spinner
            android:id="@+id/day_spinner"
            android:layout_width="67dp"
            android:layout_height="61dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/edit_text_shape"
            tools:ignore="TouchTargetSizeCheck" />

        <Spinner
            android:id="@+id/month_spinner"
            android:layout_width="67dp"
            android:layout_height="61dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/edit_text_shape" />

        <Spinner
            android:id="@+id/year_spinner"
            android:layout_width="130dp"
            android:layout_height="61dp"
            android:background="@drawable/edit_text_shape" />
    </LinearLayout>


    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:text="@string/gender"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/gender_radio_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/birthdate_layout" />

    <RadioGroup
        android:id="@+id/gender_radio_group"
        android:layout_width="180dp"
        android:layout_height="99dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/radio_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/male"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radio_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:minHeight="48dp"
            android:text="@string/female"
            android:textSize="24sp" />

    </RadioGroup>

    <Button
        android:id="@+id/next"
        android:layout_width="153dp"
        android:layout_height="57dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/btn1"
        android:backgroundTint="@color/button1"
        android:text="@string/send"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>