<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="333dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/darkGray"
        android:text="@string/welcome_back"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.794"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="287dp"
        android:layout_height="29dp"
        android:layout_marginTop="8dp"
        android:text="@string/welcome_message"
        android:textColor="@color/darkGray"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        />
    <TextView
        android:id="@+id/acc_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/acc_info"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/phone_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/phone_editText"
        android:layout_width="318dp"
        android:layout_height="57dp"
        android:layout_marginTop="5dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_shape"
        android:ems="15"
        android:hint="@string/login_hint"
        android:inputType="phone"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@+id/pass_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.268"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/acc_info" />

    <EditText
        android:id="@+id/pass_edittext"
        android:layout_width="318dp"
        android:layout_height="57dp"
        android:layout_marginTop="50dp"
        android:autofillHints="password"
        tools:layout_editor_absoluteX="19dp"
        android:padding="15dp"
        android:background="@drawable/edit_text_shape"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:ems="15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_editText"
        app:layout_constraintHorizontal_bias="0.273"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="382dp" />

    <TextView
        android:id="@+id/forget_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/forget_pass"
        android:textColor="@color/darkGray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pass_edittext"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/login"
        android:layout_width="153dp"
        android:layout_height="57dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/btn1"
        android:backgroundTint="@color/button1"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forget_pass"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>