<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FirstFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="711dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:padding="20dp"
            tools:ignore="VisualLintBounds">

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:text="@string/phone_number"
                android:textColor="@color/darkGray"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/editText"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="50dp"
                android:autofillHints=""
                android:background="@drawable/edit_text_shape"
                android:gravity="center"
                android:hint="@string/enter_phone_number"
                android:inputType="phone"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_our_privacy_policy"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:layout_marginStart="100dp"/>

            <Button
                android:id="@+id/next"
                android:layout_width="114dp"
                android:layout_height="58dp"
                android:text="@string/next"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:background="@drawable/btn1"
                android:backgroundTint="@color/button1"
                android:layout_marginTop="50dp"
                android:layout_marginStart="100dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

