<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFEBEC">

    <ImageView
        android:id="@+id/imgview_congrats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/grad_congrats"
        android:layout_margin="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"


        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/congrats_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congratulations"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/imgview_congrats"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="30sp"




        />
    <TextView
        android:id="@+id/success_msg_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/person_data_has_been_verified_successfully"
        app:layout_constraintTop_toBottomOf="@id/congrats_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:lines="2"
        android:textSize="15sp"

        />
    <Button
        android:layout_width="140dp"
        android:id="@+id/btn_finish"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/success_msg_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/finish"
        android:backgroundTint="#6E6AB4"


        />

</androidx.constraintlayout.widget.ConstraintLayout>