<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEBEC">

    <ImageView
        android:id="@+id/welcome_img"
        android:layout_width="364dp"
        android:layout_height="378dp"
        app:srcCompat="@drawable/welcomphoto"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="2dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/welcome_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_img"
        android:layout_marginTop="40dp"
        tools:layout_editor_absoluteX="143dp"
        tools:layout_editor_absoluteY="419dp" />

    <TextView
        android:id="@+id/ourcommunity_txt"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:lines="2"
        android:textSize="15dp"
        app:layout_constraintTop_toBottomOf="@id/welcome_txt"
        android:layout_marginTop="40dp"
        android:text="@string/our_community"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="512dp" />

    <Button
        android:id="@+id/welcome_next_btn"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        tools:layout_editor_absoluteX="149dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="605dp"
        app:layout_constraintTop_toBottomOf="@id/ourcommunity_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="#6E6AB4"
        />
</androidx.constraintlayout.widget.ConstraintLayout>